# freegs

./: .gitignore  .readthedocs.yml  .travis.yml  01-freeboundary.py  02-read-geqdsk.py  03-mast.py  04-read-mast-geqdsk.py  05-fixed-boundary.py  06-xpoints.py  07-increase-resolution.py  08-mast-upgrade.py  09-metal-wall.py  10-mastu-connection.py  11-optimise-coils.py  12-limited.py  13-coil-limits.py  14-constructingEigenbasis.py  14-read-geqdsk-constrained.py  15-TestMachineReconstruction.py  15-freeboundary-forward.py  15-sensorMeasurements.py  16-DIIID.py  16-constructingEigenbasis.py  17-spline-profiles.py  CONTRIBUTING.md  MAST-example.ipynb  README.md  boundary.py  constraints.py  critical.py  driver-fixedboundary.py  driver.py  equilibrium.py  example-fixedboundary.py  example-freeboundary.py  example-mast.py  example-xpoints.py  gradshafranov.py  jtor.py  machine.py  (+12 more)
.github/workflows/: benchmark.yml  codecov.yml  python-publish.yml  tests.yml
FreeGS.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
asv_bench/: asv.conf.json
asv_bench/benchmarks/: benchmarks.py
docs/: FreeGS Equilibrium.py November 2020 Update Docs.rst  Makefile  api.rst  conf.py  creating_equilibria.rst  diagnostics.rst  index.rst  input_and_output.rst  optimisation.rst  tests.rst
docs/_templates/: custom-class-template.rst
docs/api/: freegs.boundary.rst  freegs.coil.rst  freegs.control.rst  freegs.critical.rst  freegs.divgeo.rst  freegs.dump.rst  freegs.equilibrium.rst  freegs.fieldtracer.rst  freegs.filament_coil.rst  freegs.geqdsk.rst  freegs.gradshafranov.rst  freegs.jtor.rst  freegs.machine.rst  freegs.multi_coil.rst  freegs.multigrid.rst  freegs.optimise.rst  freegs.optimiser.rst  freegs.picard.rst  freegs.plotting.rst  freegs.polygons.rst  freegs.pre_calc_coil.rst  freegs.quadrature.rst  freegs.rst  freegs.shaped_coil.rst  freegs.test_critical.rst  freegs.test_equilibrium.rst  freegs.test_filament_coil.rst  freegs.test_jtor.rst  freegs.test_linearsolve.rst  freegs.test_machine.rst  freegs.test_optimise.rst  freegs.test_optimiser.rst  freegs.test_polygons.rst  freegs.test_quadrature.rst  freegs.test_readwrite.rst  freegs.test_sensors.rst  freegs.test_shaped_coil.rst  modules.rst
freegs/: README.md  __init__.py  _aeqdsk.py  _divgeo.py  _fileutils.py  _forces.py  _geqdsk.py  boundary.py  coil.py  constraints.py  control.py  critical.py  divgeo.py  dump.py  equilibrium.py  fieldtracer.py  filament_coil.py  geqdsk.py  geqdskfile.py  gradshafranov.py  jtor.py  machine.py  multi_coil.py  multigrid.py  newtonk.py  omasio.py  optimise.py  optimiser.py  picard.py  plotting.py  polygons.py  pre_calc_coil.py  quadrature.py  recon_matrices.py  recon_tools.py  reconstruction.py  saving_test_equilibria.py  shaped_coil.py  test-geqdsk.py  test_aeqdsk.py  (+19 more)
