[build-system]
requires = [
    "setuptools >= 64.0.0",
    "setuptools_scm >= 8",
]
build-backend = "setuptools.build_meta"

[project]
name = "FreeGS"
description = "Free boundary Grad-Shafranov solver for tokamak plasma equilibria"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Physics"
]
license = {text = "GNU Lesser General Public License v3 or later (LGPLv3+)"}
authors = [{name = "Ben Dudson", email = "benjamin.dudson@york.ac.uk"}]
urls = {project = "https://github.com/freegs-plasma/freegs"}
dependencies = [
    "numpy>=1.25.0",
    "scipy>=1.11.0",
    "matplotlib>=3.8.0",
    "h5py>=2.10.0",
    "Shapely>=1.7.1",
    "freeqdsk>=0.1.0",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
    "pytest",
]
docs = [
    "sphinx >= 5.3",
    "sphinx_autodoc_typehints >= 1.19",
    "sphinx-book-theme >= 0.4.0rc1",
]

[tool.setuptools]
packages = ["freegs"]

[tool.setuptools.dynamic]
version = { attr = "setuptools_scm.get_version" }

[tool.setuptools_scm]
write_to = "freegs/_version.py"
